--- a/FileMan/Base.lproj/Main.storyboard
+++ b/FileMan/Base.lproj/Main.storyboard
@@ -1067,7 +1067,7 @@
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
-                            <tableViewSection footerTitle="Copyright © 2017 Sami Sharaf All rights reserved. / Version 1.1.1" id="O5G-ds-tMi">
+                            <tableViewSection footerTitle="Copyright © 2017 Sami Sharaf All rights reserved. / Version 1.2.0" id="O5G-ds-tMi">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="PQj-r9-27S">
                                         <rect key="frame" x="0.0" y="757" width="375" height="44"/>
@@ -1702,11 +1702,19 @@
                                 <action selector="hideMusicVC:" destination="ywO-En-x06" id="2Rj-KZ-xOB"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" id="ErW-I1-xY0">
+                            <view key="customView" contentMode="scaleToFill" id="TOw-rd-25n">
+                                <rect key="frame" x="314" y="5" width="45" height="33"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </view>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" prompted="NO"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="airPlayView" destination="TOw-rd-25n" id="uxB-Oo-kvs"/>
                         <outlet property="albumArtwork" destination="DF6-OV-vB9" id="mzk-mo-mKX"/>
                         <outlet property="artistName" destination="9AQ-Qp-ABy" id="ala-My-waj"/>
                         <outlet property="backButton" destination="QKQ-G4-PXN" id="qu2-aM-LLe"/>
